--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ h1 {
   font-size: 24px;
   color: #0e2b64;
   margin-bottom: 10px;
+  /* margin-top: -10px; */
 }
 
 p,
@@ -90,13 +91,15 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: flex-start;
+  margin-top: 15px;
 }
 
 iframe {
   margin: 0 auto;
   width: 100%;
   height: 225px;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   max-width: 350px;
 }
 
@@ -104,6 +107,14 @@ iframe {
   .intro section {
     width: 50%;
   }
+}
+
+.goal {
+  padding: 20px;
+  background-color: #0e2b642a;
+  color: #111;
+  margin: 20px 0;
+  font-size: 14px;
 }
 
 /* Color Background Text Section */
