--- a/main.css
+++ b/main.css
@@ -127,6 +127,13 @@ iframe {
   color: rgb(5, 6, 48);
 }
 
+.alt-color-1 {
+  background-color: rgba(60, 122, 151, 0.65);
+}
+
+.alt-color-2 {
+  background-color: rgba(60, 143, 151, 0.404);
+}
 @media (min-width: 720px) {
   .intro section {
     width: 50%;
