--- a/main.css
+++ b/main.css
@@ -133,6 +133,7 @@ a:hover {
 
 .policy-title {
   margin-top: 25px;
+  margin-bottom: 0;
 }
 
 .video-title {
@@ -224,7 +225,7 @@ iframe {
   margin: 17px 0;
   text-align: center;
   list-style-type: none;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.2;
 }
 .ta-left li {
@@ -232,7 +233,8 @@ iframe {
 }
 @media (min-width: 720px) {
   .video-list li {
-    font-size: 15px;
+    font-size: 19px;
+    padding-bottom: 8px;
   }
 }
 
