Add en/es locales

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= I18n.locale %>">
 
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -42,7 +42,7 @@
       <div class="intro">
         <section class="text-column">
 
-          <h1>Who is Andrew Yang?</h1>
+          <h1><%= I18n.t('header') %></h1>
 
           <p>
             Andrew is a smart, pragmatic, humanity-first leader focused on bringing our country back together. <span class="highlight">It's Not Left, Not Right, it's Forward.</span></p>
