--- a/views/index.erb
+++ b/views/index.erb
@@ -178,7 +178,7 @@
         <section class="text-content">
           <h2>Why this site?</h2>
           <p>
-            I wanted to create something to help Andrew Yang run for president,
+            We wanted to create something to help Andrew Yang run for president,
             and anyone interested in sharing his message. Feel free to share the
             link.
           </p>
