add language toggle

--- a/views/index.erb
+++ b/views/index.erb
@@ -42,7 +42,7 @@
       <div class="intro">
         <section class="text-column">
 
-          <h1><%= I18n.t('intro.header') %></h1>
+          <h1><%= I18n.t('intro.header') %> <a href="<%= I18n.t('lang.link') %>"><%= I18n.t('lang.text') %></a></h1>
 
           <p><%= I18n.t('intro.a') %></p>
 
