--- a/public/main.css
+++ b/public/main.css
@@ -36,6 +36,12 @@ h1 {
   color: #0e2b64;
   margin-bottom: 10px;
 }
+
+h1 a {
+  font-size: 12px;
+  float: right;
+}
+
 p,
 li {
   font-size: 16px;
