add one more translation

--- a/views/index.erb
+++ b/views/index.erb
@@ -99,12 +99,10 @@
         </section>
 
         <section class="text-content">
-          <h2>
-            What can I do?
-          </h2>
+          <h2><%= I18n.t('what.header') %></h2>
           <ul class="video-list ta-left">
             <li><a href="https://www.yang2020.com/" title="<%= I18n.t('what.a.title') %>"><%= I18n.t('what.a.text') %></a></li>
-            <li><a href="https://www.yang2020.com/Iowa/" title="<%= I18n.t('what.b.title') %>"><%= I18n.t('what.a.text') %></a></li>
+            <li><a href="https://www.yang2020.com/Iowa/" title="<%= I18n.t('what.b.title') %>"><%= I18n.t('what.b.text') %></a></li>
             <li><a href="https://www.yang2020.com/call/" title="<%= I18n.t('what.c.title') %>"><%= I18n.t('what.c.text') %></a></li>
             <li><a href="https://www.yang2020.com/text/" title="<%= I18n.t('what.d.title') %>"><%= I18n.t('what.d.text') %></a></li>
             <li><a href="https://shop.yang2020.com/collections/signs" title="<%= I18n.t('what.e.title') %>"><%= I18n.t('what.e.text') %></a></li>
