--- a/views/index.erb
+++ b/views/index.erb
@@ -195,6 +195,8 @@
 
     <footer>
       <div class="main-content">
+        <%= I18n.t('footer.contributors') %>
+        <br /><br />
         <%= I18n.t('footer.feedback') %>
         <br /><br />
         <a href="assets/YouTube-Andrew-Business-card.pdf" title="<%= I18n.t('footer.cards') %>">
