Force reindex of image

--- a/views/index.erb
+++ b/views/index.erb
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet" />
     <meta name="description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
     <meta property="og:site_name" content="An Introduction to Andrew Yang" />
-    <meta property="og:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png" />
+    <meta property="og:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex2" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangintro.com" />
     <meta property="og:title" content="An Introduction to Andrew Yang" />
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
     <meta name="twitter:title" content="An Introduction to Andrew Yang" />
-    <meta name="twitter:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png" />
+    <meta name="twitter:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex=1" />
     <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
   </head>
