--- a/views/index.erb
+++ b/views/index.erb
@@ -20,18 +20,18 @@
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet" />
     <meta name="description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
+    <meta name="twitter:title" content="An Introduction to Andrew Yang" />
+    <meta name="twitter:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex=1" />
+    <meta name="twitter:creator" content="@ericcurtis" />
     <meta property="og:site_name" content="An Introduction to Andrew Yang" />
-    <meta property="og:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex2" />
+    <meta property="og:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex=2" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://andrewyangintro.com" />
     <meta property="og:title" content="An Introduction to Andrew Yang" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="610" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
-    <meta name="twitter:title" content="An Introduction to Andrew Yang" />
-    <meta name="twitter:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex=1" />
-    <meta name="twitter:creator" content="@ericcurtis" />
     <link rel="icon" href="/assets/Y_Favicon-1-300x300.png" sizes="192x192" />
   </head>
 
