Tweak social description

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,9 +19,9 @@
     <title><%= I18n.t('title') %></title>
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet" />
-    <meta name="description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
+    <meta name="description" content="See how Andrew Yang's platform is the best way to move us forward in the 21st century" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Learn how Andrew Yang can help us eliminate poverty, transform our economy to handle the automation of jobs, and end the mindset of scarcity." />
+    <meta name="twitter:description" content="See how Andrew Yang's platform is the best way to move us forward in the 21st century" />
     <meta name="twitter:title" content="An Introduction to Andrew Yang" />
     <meta name="twitter:image" content="https://andrewyangintro.com/assets/social-thumb-videos-3.png?reindex=1" />
     <meta name="twitter:creator" content="@ericcurtis" />
