--- a/views/index.erb
+++ b/views/index.erb
@@ -50,6 +50,7 @@
 
           <p><%= I18n.t('intro.c') %></p>
 
+          <img src="/assets/nh.png" alt="<%= I18n.t('intro.img.alt') %>" class="esm-graphic">
           <img src="/assets/desmoines.png" alt="<%= I18n.t('intro.img.alt') %>" class="esm-graphic">
 
           <p class="cta-box4"><%= I18n.t('intro.impact') %></p>
