Change top video to CNN town hall

--- a/views/index.erb
+++ b/views/index.erb
@@ -51,7 +51,6 @@
           <p><%= I18n.t('intro.c') %></p>
 
           <img src="/assets/nh.png" alt="<%= I18n.t('intro.img.alt') %>" class="esm-graphic">
-          <img src="/assets/desmoines.png" alt="<%= I18n.t('intro.img.alt') %>" class="esm-graphic">
 
           <p class="cta-box4"><%= I18n.t('intro.impact') %></p>
 
@@ -67,10 +66,10 @@
           <% if I18n.locale.to_s != "es" %>
             <%= youtube_iframe_embed(video_id: "JwW8-R9TH5I") %>
           <% else %>
-            <%= youtube_iframe_embed(video_id: "vet_lwL8YMM") %>
+            <%= youtube_iframe_embed(video_id: "xGdKJvBx7Uk") %>
           <% end %>
 
-          <p class="video-title"><%= I18n.t('video.iowa_press') %></p>
+          <p class="video-title"><%= I18n.t('video.top') %></p>
 
           <!-- Iowa Stump Speech -->
           <%= youtube_iframe_embed(video_id: "GkepAtjSJLI", width: 300, height: 200) %>
