Add new debate video

--- a/views/index.erb
+++ b/views/index.erb
@@ -125,7 +125,7 @@
     <div class="main-content lower-content">
       <section class="long-form-videos">
         <h2 id="debates">Debate Performances:</h2>
-
+        <%= youtube_iframe_embed(video_id: "bEnRBQFyNZg", width: 300, height: 200) %>
         <%= youtube_iframe_embed(video_id: "dNSGMDu58Ok", width: 300, height: 200) %>
         <%= youtube_iframe_embed(video_id: "6crg579lpds", width: 300, height: 200) %>
         <%= youtube_iframe_embed(video_id: "LVkCfCQDXe8", width: 300, height: 200) %>
