--- a/views/index.erb
+++ b/views/index.erb
@@ -99,26 +99,26 @@
 
     <div class="color-band">
       <div class="main-content">
-        <section class="text-content">
-          <h2><%= I18n.t('victory.header') %></h2>
-          <p><%= I18n.t('victory.a') %></p>
-          <p><%= I18n.t('victory.b') %></p>
-          <p><%= I18n.t('victory.c') %></p>
-        </section>
+        # <section class="text-content">
+        #   <h2><%= I18n.t('victory.header') %></h2>
+        #   <p><%= I18n.t('victory.a') %></p>
+        #   <p><%= I18n.t('victory.b') %></p>
+        #   <p><%= I18n.t('victory.c') %></p>
+        # </section>
 
-        <section class="text-content">
-          <h2><%= I18n.t('what.header') %></h2>
-          <ul class="video-list ta-left">
-            <li><a href="https://www.yang2020.com/" title="<%= I18n.t('what.a.title') %>"><%= I18n.t('what.a.text') %></a></li>
-            <li><a href="https://www.yang2020.com/Iowa/" title="<%= I18n.t('what.b.title') %>"><%= I18n.t('what.b.text') %></a></li>
-            <li><a href="https://www.yang2020.com/call/" title="<%= I18n.t('what.c.title') %>"><%= I18n.t('what.c.text') %></a></li>
-            <li><a href="https://www.yang2020.com/text/" title="<%= I18n.t('what.d.title') %>"><%= I18n.t('what.d.text') %></a></li>
-            <li><a href="https://shop.yang2020.com/collections/signs" title="<%= I18n.t('what.e.title') %>"><%= I18n.t('what.e.text') %></a></li>
-            <li><a href="https://shop.yang2020.com/collections/bumper-stickers" title="<%= I18n.t('what.f.title') %>"><%= I18n.t('what.f.text') %></a></li>
-            <li><a href="https://yanganswers.com/" title="<%= I18n.t('what.g.title') %>"><%= I18n.t('what.g.text') %></a></li>
-          </ul>
+        # <section class="text-content">
+        #   <h2><%= I18n.t('what.header') %></h2>
+        #   <ul class="video-list ta-left">
+        #     <li><a href="https://www.yang2020.com/" title="<%= I18n.t('what.a.title') %>"><%= I18n.t('what.a.text') %></a></li>
+        #     <li><a href="https://www.yang2020.com/Iowa/" title="<%= I18n.t('what.b.title') %>"><%= I18n.t('what.b.text') %></a></li>
+        #     <li><a href="https://www.yang2020.com/call/" title="<%= I18n.t('what.c.title') %>"><%= I18n.t('what.c.text') %></a></li>
+        #     <li><a href="https://www.yang2020.com/text/" title="<%= I18n.t('what.d.title') %>"><%= I18n.t('what.d.text') %></a></li>
+        #     <li><a href="https://shop.yang2020.com/collections/signs" title="<%= I18n.t('what.e.title') %>"><%= I18n.t('what.e.text') %></a></li>
+        #     <li><a href="https://shop.yang2020.com/collections/bumper-stickers" title="<%= I18n.t('what.f.title') %>"><%= I18n.t('what.f.text') %></a></li>
+        #     <li><a href="https://yanganswers.com/" title="<%= I18n.t('what.g.title') %>"><%= I18n.t('what.g.text') %></a></li>
+        #   </ul>
 
-        </section>
+        # </section>
       </div>
     </div>
 
